added jobs container

--- a/index.html
+++ b/index.html
@@ -238,6 +238,23 @@
     </div>
   </section>
 
+  <section class="jobs">
+    <div class="container">
+       <h2>Trabajos</h2>
+      <ul>
+        <li>
+          <div class="skill-item">
+            <div class="skill-description">
+              <strong>Aprende a Patinar en Mallorca</strong>
+              <span> <a href="https://aprendeapatinarenmallorca.com" target="_blank">aprendeapatinarenmallorca.com</a></span>
+            </div>
+           
+          </div>
+        </li>
+      </ul>    
+    </div>
+  </section>
+
   <footer>
     <div class="container">
       <a href="mailto:jmmartinez.social@gmail.com">jmmartinez.desarollo@outlook.com</a>
